--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<p><B>NOTE :- ANY CHANGES IF OCCURED IN GITHUB IT AUTOMATICALLY
 		THEN ONLY OUR JENKINS JOBS WILL BE GOING TO RUN 
 		</B></p>
-
+		<p>updating the value to swcond commit</p>
 	</body>
 
 
